hphp/hack/test/typecheck/reactive/rx_of_scope4.php.exp
File "rx_of_scope4.php", line 5, characters 23-33:
<<__RxOfScope>> attribute is only allowed on lambdas. (Naming[2090])
