hphp/hack/test/typecheck/reactive/rx_of_scope4.php
<?hh

class A {
  // ERROR
  public function f(<<__RxOfScope>>int $a): void {
  }
}
